# missle_guidance

./: .gitignore  CLAUDE.md  Cargo.toml  FAILURE_TRACKING.md  LICENSE  NO_OUTPUT.md  README.md  VERIFICATION_SUMMARY.md  verify.sh
MATLAB/: C10L1.m  C11L1.m  C11L2.m  C12L1.m  C12L2.m  C12L3.m  C13L1.m  C14L1.m  C14L2.m  C15L1.m  C15L2.m  C15L3.m  C15L4.m  C15L5.m  C15L6.m  C15L7.m  C15L8.m  C16L1.m  C16L2.m  C17L1.m  C17L2.m  C17L3.m  C17L4.m  C17L5.m  C17L6.m  C18L1.m  C18L2.m  C19L1.m  C19L2.m  C1L1.m  C1L2.m  C1L3.m  C20L1.m  C20L2.m  C20L3.m  C20L4.m  C20L5.m  C20L6.m  C20L7.m  C20L8.m  (+143 more)
src/: lib.rs  main.rs  plotting.rs
src/chapters/: mod.rs
src/chapters/c1/: l1.rs  l2.rs  l3.rs  mod.rs
src/chapters/c10/: l1.rs  mod.rs
src/chapters/c11/: l1.rs  l2.rs  mod.rs
src/chapters/c12/: l1.rs  l2.rs  l3.rs  mod.rs
src/chapters/c13/: l1.rs  mod.rs
src/chapters/c14/: l1.rs  l2.rs  mod.rs
src/chapters/c15/: l1.rs  l2.rs  l3.rs  l4.rs  l5.rs  l6.rs  l7.rs  l8.rs  mod.rs
src/chapters/c16/: l1.rs  l2.rs  mod.rs
src/chapters/c17/: l1.rs  l2.rs  l3.rs  l4.rs  l5.rs  l6.rs  mod.rs
src/chapters/c18/: l1.rs  l2.rs  mod.rs
src/chapters/c19/: l1.rs  l2.rs  mod.rs
src/chapters/c2/: l1.rs  l2.rs  mod.rs
src/chapters/c20/: l1.rs  l2.rs  l3.rs  l4.rs  l5.rs  l6.rs  l7.rs  l8.rs  l9.rs  mod.rs
src/chapters/c21/: l1.rs  l2.rs  mod.rs
src/chapters/c22/: l1.rs  l2.rs  l3.rs  l4.rs  l5.rs  mod.rs
src/chapters/c23/: l1.rs  (+4 more)
src/utils/: constants.rs  gains.rs  initial.rs  kepler.rs  lambert2d.rs  lambert3d.rs  mod.rs  olambert.rs  predict.rs  project.rs  rk2.rs
(+136 files in other folders)
